blockml/test/errors/03_view/e291/e291.view
view: e291
derived_table: |
  'SELECT * FROM ...'
pdt_trigger_time: '* * * * *'
fields:
- dimension: dim1
  sql: 111



